--- a/ExpenseManagement/Backend/ExpenseManagement.ActivityApi/ExpenseManagement.ActivityApi/ExpenseManagement.ActivityApi.csproj
+++ b/ExpenseManagement/Backend/ExpenseManagement.ActivityApi/ExpenseManagement.ActivityApi/ExpenseManagement.ActivityApi.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\ExpenseManagement.Repository\ExpenseManagement.Repository\ExpenseManagement.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
