--- a/ExpenseManagement/Backend/ExpenseManagement.Authentication/ExpenseManagement.Authentication/appsettings.json
+++ b/ExpenseManagement/Backend/ExpenseManagement.Authentication/ExpenseManagement.Authentication/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer": "MyTrackerApp",
+    "ExpiryMinutes": 5,
+    "Key": "MyTrackerAppSecurityKeyForJwtToken@2024"
+  }
 }
