--- a/ExpenseManagement/Backend/ExpenseManagement.Authentication/ExpenseManagement.Authentication/ExpenseManagement.Authentication.csproj
+++ b/ExpenseManagement/Backend/ExpenseManagement.Authentication/ExpenseManagement.Authentication/ExpenseManagement.Authentication.csproj
@@ -9,8 +9,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.12" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\EntityModel\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\ExpenseManagement.Repository\ExpenseManagement.Repository\ExpenseManagement.Repository.csproj" />
   </ItemGroup>
 
 </Project>
